- added parameters <constraints/{nonlinear,quadratic,soc,signedpower}/maxsepanlprounds> to enable solving NLP relaxation in root node and adding cuts from linearizations of convex nonlinear constraints into cutpool

features:
- flatzinc reader is now capable to read cumulative constraints
- new heuristic vbounds which use the variables lower and upper bounds to fix variable and performs a neighborhood search
- new method SCIPwriteVarsVboundGraph() (scip.c) which writes the variable lower or upper bounds graph to a file in GML format
- new method SCIPvarGetHashkey(), SCIPvarIsHashkeyEq(), SCIPvarGetHashkeyVal() in pub_var.h which can be used for SCIP_HASHTABLE of variables
- new dialog "write vboundgraph" which can be used to write the variable lower or upper bound graph to a file from the interactive shell
- the xor constraint handler can now parse its constraints
- the bounddisjunction constraint handler can now parse its constraints
- SCIP-CPX is now threadsafe
- new dual presolving methods in cons_setppc and cons_logicor
- added dialog "write nlp" to write current NLP relaxation to a file
- new data structure SCIP_STAIRMAP
- information about the quality of the solution of an LP (currently the condition number of the basis matrix) can now be requested from the LPI (currently only available for CPLEX):
  - methods SCIPlpiGetRealSolQuality() and SCIPprintLPSolutionQuality()
  - command display lpsolquality in interactive shell
  - display column lpcond to show estimate on condition number, if available
- comparison of solutions now also works for original solutions
- added writing for wbo files
- changed opb(/wbo) reader which now creates pseudoboolean constraints instead of linear- and and-constraints, only a non-linear objective will create and-constraints inside the reader and while reading a wbo file the topcost constraint is created as well
- moved code of scip.c:SCIPreadSol() to reader_sol.c; call solution reading via SCIPreadProb()